test/org/midica/testfiles/failing/zero-tempo.midica
INCLUDE inc/instruments.midica

* tempo 0
